# Speaker_identification_-GMM-UBM-

./: .gitignore  README.md  features_extraction.py  files_manager.py  main.py  map_adaptation.py  pre_processing.py  pyproject.toml  speaker_identification.py
data/model/: gmm0.pkl  gmm1.pkl  gmm10_sabrina_ferilli.pkl  gmm11_rosario_fiorello.pkl  gmm12_maurizio_crozza.pkl  gmm13_paola_cortellesi.pkl  gmm14_neri_marcore.pkl  gmm15_virginia_raffaele.pkl  gmm1_alberto_angela.pkl  gmm2.pkl  gmm2_andrea_camilleri.pkl  gmm3_giuseppe_conte.pkl  gmm4_gianni_morandi.pkl  gmm5_papa_francesco.pkl  gmm6_mike_bongiorno.pkl  gmm7_mariastella_gelmini.pkl  gmm8_matteo_renzi.pkl  gmm9_silvio_berlusconi.pkl  ubm.pkl  ubm0.pkl  ubm1.pkl  ubm2.pkl
data/model/old_model/: gmm0.pkl  gmm1.pkl  gmm10.pkl  gmm11.pkl  gmm12.pkl  gmm12_maurizio_crozza.pkl  gmm13.pkl  gmm14.pkl  gmm2.pkl  gmm3.pkl  gmm4.pkl  gmm4_gianni_morandi.pkl  gmm5.pkl  gmm6.pkl  gmm6_mike_bongiorno.pkl  gmm7.pkl  gmm7_mariastella_gelmini.pkl  gmm8.pkl  gmm8_matteo_renzi.pkl  gmm9.pkl  ubm0.pkl
data/ubm_dataset/: convert.sh
src/speaker_id/: __init__.py  cli.py  config.py  gui.py  reporting.py
src/speaker_id/application/: use_cases.py
src/speaker_id/audio/: io.py  splitter.py
src/speaker_id/domain/: naming.py
src/speaker_id/features/: mfcc.py
src/speaker_id/ml/: classifier.py  gmm_ubm.py  persistence.py
tests/: test_config.py  test_features.py  test_map_adaptation.py  test_naming.py
